# social_m-chdt

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
posts/: factories.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_comment_posts_comme_post_id_06cfd5_idx_and_more.py
social_med/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_posts/: test_views.py
tests/test_users/: test_queries.py  test_views.py
users/: factories.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: populate_db.py
users/migrations/: 0001_initial.py
